# maya

./: .gitignore  Makefile  README.md  main.py  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
Parser/: rest_document_parser.py  template.json
Utils/: logger.py  resource_group.py
app/: __init__.py
configs/: settings.py
docs/: features.md  tech.md
execution/: api_executor.py  auth_manager.py  execution_runner.py  file_manager.py  lifecycle_executor.py  request_builder.py  resource_context.py  validator.py  validator_factory.py
features/: 01-project-scaffolding-and-dev-environment.md  02-shared-data-model-and-file-storage.md  03-adapter-layer-foundations-llm-and-browser.md  04-project-and-environment-management.md  05-ui-perception-primitives.md  06-autonomous-ui-exploration-agent.md  07-human-review-and-approval-workflow.md  08-ui-execution-engine.md  09-view-identity-and-change-detection.md  10-self-healing-locator-engine.md  11-scenario-interpreter.md  12-file-upload-coverage-ui.md  13-job-scheduler-and-concurrency.md  14-rest-api-trigger-contract-and-webhooks.md  15-logging-subsystem-completion.md  16-adapter-layer-extension-http-and-spec.md  17-api-project-and-environment-packages.md  18-api-discovery-agent.md  19-api-test-runner.md  20-operation-identity-and-spec-diff-change-detection.md  21-api-healing-engine.md  22-file-upload-coverage-api.md  23-concurrency-extension-and-final-verifications.md  stories.md
framework-data/: global_config.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js  (+2 more)
(+289 files in other folders)
