[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maya"
version = "0.1.0"
description = "AI-driven test automation framework (UI + API), local-LLM powered via Ollama."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.6,<3.0",
    "httpx>=0.27,<1.0",
    "playwright>=1.43,<2.0",
    "prance>=23.6,<24.0",
    "openapi-core>=0.19,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
    "black>=24.0,<25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maya"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["maya"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
